--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "js-cookie": "^2.2.0",
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
+    "sass-loader": "^7.1.0",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -26,7 +27,9 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0",
-    "vue-template-compiler": "^2.5.21"
+    "node-sass": "^4.11.0",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.30.0"
   },
   "eslintConfig": {
     "root": true,
