--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mockjs": "^1.0.1-beta3",
     "nprogress": "^0.2.0",
     "sass-loader": "^7.1.0",
+    "svg-sprite-loader": "^4.1.3",
     "vue": "^2.6.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
